<resources>
    <string name="app_name">OMarket</string>


    <!--  login activity  -->
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="or_login_with">or login with ...</string>
    <string name="need_to_market">Need to market ?</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="already_registered">Already registered ?</string>

    <!--  navigation buttons  -->
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_products">Products</string>
    <string name="main_activity">mainActivity</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="login_image">Login image</string>
    <string name="loginFragment">loginFragment</string>

    <!-- save repoUser information in google sign in  -->
    <string name="profile_file_key">profile file key</string>
    <string name="name_key">name key</string>
    <string name="email_key">email key</string>
    <string name="image_key">image key</string>

    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="information">Information</string>
    <string name="product_image">Product Image</string>
    <string name="cost">cost</string>
    <string name="title">Title</string>
    <string name="edit">Edit</string>
    <string name="registerFragment" />

    <string name="hello">Hello World, ImageGalleryDemoActivity!</string>
    <string name="OMarket">ImageGalleryDemo</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="load_picture">Load Picture</string>
    <string name="sign_out">sign out</string>
    <string name="load_image">Load Image</string>
    <string name="checkbox">CheckBox</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>

    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email below:</string>
    <string name="submit">Submit</string>
    <string name="back">BACK</string>
    <string name="electronic">Electronic</string>
    <string name="fashion">Fashion</string>
    <string name="industrial">Industrial</string>
    <string name="favorite">Favorite</string>
</resources>