<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/title_settings"
        android:icon="@drawable/ic_settings_white"
        android:id="@+id/navigation_bottom_settings" />

    <item
        android:title="@string/title_dashboard"
        android:icon="@drawable/ic_person_white"
        android:id="@+id/navigation_bottom_dashboard" />

    <item
        android:title="@string/title_home"
        android:icon="@drawable/ic_home_white"
        android:id="@+id/navigation_bottom_home" />

    <item
        android:title="@string/title_favorite"
        android:icon="@drawable/ic_favorite_white"
        android:id="@+id/navigation_bottom_favorite" />

    <item
        android:title="@string/title_products"
        android:icon="@drawable/ic_list_white"
        android:id="@+id/navigation_bottom_products" />

</menu>