<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="@dimen/normalWidth"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginBetween"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5">

                <TextView
                    android:id="@+id/title_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/titles_color"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_text_email_address_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginBetween"
                    android:background="@drawable/text_background"
                    android:drawableStart="@drawable/ic_baseline_alternate_email_24"
                    android:drawableLeft="@drawable/ic_baseline_alternate_email_24"
                    android:drawablePadding="@dimen/paddingDrawable"
                    android:hint="@string/email_address"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/edit_text_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginBetween"
                    android:background="@drawable/text_background"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="@dimen/paddingSmall"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/login_text_view_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_marginTop="@dimen/marginBetween"
                    android:layout_marginBottom="@dimen/marginBetween"
                    android:text="@string/forget_password"
                    android:textColor="@color/links_color"
                    android:textSize="@dimen/mediumTextSize"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_backgrounds"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/marginBetween"
                    android:text="@string/or_login_with"
                    android:textSize="@dimen/mediumTextSize" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="@dimen/normalWidth"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">


                <com.google.android.gms.common.SignInButton
                    android:id="@+id/google_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingEnd="@dimen/paddingSmall"
                    android:paddingRight="@dimen/paddingSmall"
                    tools:ignore="RtlSymmetry" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
                app:layout_constraintStart_toStartOf="@+id/linearLayout2"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/need_to_market"
                    android:textSize="@dimen/mediumTextSize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout2"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/login_text_view_register"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/register"
                    android:textColor="@color/links_color"
                    android:textSize="@dimen/mediumTextSize"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageViewLogin"
                android:layout_width="@dimen/loginImageWidth"
                android:layout_height="@dimen/loginImageWidth"
                android:contentDescription="@string/login_image"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:srcCompat="@mipmap/online_market_foreground" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>