<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_marginTop="20dp">
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="240dp"
        android:src="@mipmap/forget_password_foreground"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/registered_emailid"
            android:textColor="#7C7A7A"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/registered_emailid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/normal_text_background"
            android:drawableLeft="@drawable/ic_baseline_alternate_email_24"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#8F8E8E"
            android:textColorHint="#A6A5A5"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/newPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/normal_text_background"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="New Password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#CCCACA"
            android:textColorHint="#A6A5A5" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/backToLoginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"

                android:padding="5dp"
                android:text="@string/back"
                android:textColor="@color/white2"
                android:textSize="15sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/forgot_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:background="@drawable/button_backgrounds"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>